# Legal-MT-SFT-RL

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  convert_jsonl_to_prompts.py  debugger.py  dist.py  evaluate.py  metric.py  ocr.py  pyproject.toml  train.py
.github/workflows/: python.yaml
config/: entry.py  evaluate.py  grpo.py  hardware.py  image.py  lora.py  lr.py  ocr.py  optim.py  train.py
dataset/: __init__.py  batch.py  collate.py  instruct.py  prefill.py  resize.py
dataset/chat/: messages.py  processing.py
lr_scheduler/: __init__.py  base.py  const.py  cos.py  inv_sqrt.py  warmup.py
metric/: __init__.py  functional.py  metrics.py  table.py  tracker.py
model/: __init__.py  loader.py  utils.py  vision.py
reward/: __init__.py  classification.py  reward.py  structure.py  translation.py
test/dataset/: test_resize.py
test/dataset/chat/: test_processing.py
test/dataset/chat/processing/: boundary.py  test_multi_token_boundary.py  test_single_token_boundary.py  test_tokenisers.py
test/utils/: test_fmt.py
trainer/: __init__.py  base.py  grpo.py  instruct.py  progress.py  progress_columns.py  result.py
utils/: fmt.py  hardware.py  nested_dict.py
