[project]
name = "vision-finetune"
version = "0.1.0"
description = "Fine-tuning Vision Language Models (VLMs)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "bitsandbytes>=0.44.1",
    "hf-transfer>=0.1.8",
    "peft>=0.13.2",
    "rich>=13.9.4",
    "simple-parsing>=0.1.6",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.3",
    "triton>=3.1.0",
    "trl>=0.12.1",
    "unsloth",
    "unsloth-zoo",
    "wandb>=0.18.7",
    "xformers>=0.0.28.post3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.22.0",
    "debugpy>=1.8.9",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportPrivateImportUsage = false
reportMatchNotExhaustive = true
reportUnnecessaryComparison = true
# These need to be ignored separately, even though they are already in gitignore.
# Otherwise it tries to check all files in the virtual environment (.venv) or any
# of these generated directories.
exclude = [
  "**/__pycache__",
  ".ruff_cache/",
  ".cache/",
  ".venv/",
  "log/",
  "unsloth_compiled_cache/",
]
# Automatically look in the virtual environment for packages
venv = ".venv"
venvPath = "."


[tool.pytest.ini_options]
testpaths = "test"

[tool.ruff.lint]
# Additionally include import sorting lints (and automatic formatting with --fix)
extend-select = ["I"]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo.git" }
transformers = { git = "https://github.com/huggingface/transformers.git" }
